Enable 3D Water by Default
- This will allow 3D Water to be enabled by default at start up for regions

NOTE: If your viewer does not support 3D Water your viewer may crash.  Most modern Viewers such as the Firestorm Viewer however do support 3D water.

Signed-Off-By: EmperorStarfinder<emperor@secondgalaxy.com>

--- a/VirtualUniverse/Config/Sim/Modules/Startup.ini
+++ b/VirtualUniverse/Config/Sim/Modules/Startup.ini
@@ -42,8 +42,8 @@ MaxNumberOfAttachments = 38
 SendTerrainByViewDistance = true
 
 ;; Enable the generation of 3D water (THIS WILL CAUSE YOUR CLIENT TO CRASH UNLESS IT SUPPORTS IT)
-;; Default is false
-Use3DWater = false
+;; Default is true
+Use3DWater = true
 
 ;; If you wish to have no terrain, enable this option
 ;; Default is false
