--- a/VirtualUniverse/Config/Grid/ServerConfiguration/Modules/SMTPEmail.ini
+++ b/VirtualUniverse/Config/Grid/ServerConfiguration/Modules/SMTPEmail.ini
@@ -25,6 +25,13 @@ local_only = true
 ; SMTP_SERVER_LOGIN = <myemail>@gmail.com
 ; SMTP_SERVER_PASSWORD = <mypassword>
 
+;; It appears that due to the increased security with GMail, additional steps are required
+;;  to allow WhiteCore to access your GMail account.
+;; If 2 stage verification is used , an 'app password' is required
+;; This will need to be generated and used in place of the  normal account password
+;;
+;; If 1 step verification is used, access for 'less secure apps' will need to be turned off.
+
 ;; To use mono (Linux etc) you should import Google's certificate by executing the following commands
 ;; sudo mozroots --import --ask-remove
 ;; sudo certmgr -ssl smtps://smtp.gmail.com:465
