--- a/VirtualUniverse/Config/Sim/Modules/Startup.ini
+++ b/VirtualUniverse/Config/Sim/Modules/Startup.ini
@@ -29,7 +29,7 @@ SlowFlyDelay = 10
 [Attachments]
 ;; Allows multiple attachments to be added to an avatar in Viewer 2
 ;; Default is true
-EnableMultipleAttachments = true
+EnableMultipleAttachments = false
 
 ;; The maximum number of attachments an avatar can wear at one time
 ;; Default is 38
