Corrections to the config files
- A couple of quick corrections in the configuration files

Signed-Off-By: EmperorStarfinder<emperor@secondgalaxy.com>

--- a/VirtualUniverse/Config/Grid/ServerConfiguration/Modules/SMTPEmail.ini
+++ b/VirtualUniverse/Config/Grid/ServerConfiguration/Modules/SMTPEmail.ini
@@ -26,7 +26,7 @@ local_only = true
 ; SMTP_SERVER_PASSWORD = <mypassword>
 
 ;; It appears that due to the increased security with GMail, additional steps are required
-;;  to allow WhiteCore to access your GMail account.
+;;  to allow Virtual Universe to access your GMail account.
 ;; If 2 stage verification is used , an 'app password' is required
 ;; This will need to be generated and used in place of the  normal account password
 ;;
