--- a/VirtualUniverse/Config/MyGrid.ini
+++ b/VirtualUniverse/Config/MyGrid.ini
@@ -35,14 +35,14 @@
 ;DefaultHomeRegion = ""
 
 [SystemUserService]
-;;  Modify these if you want to change the name of a WhiteCore system user
+;;  Modify these if you want to change the name of a Virtual Universe system user
 ;GovernorName = "Governor Universe"
 ;RealEstateOwnerName = "RealEstate Owner"
 ;BankerName = "Universe Banker"
 ;MarketplaceOwnerName = "Marketplace Concierge"
 
 [EstateService]
-;;  Modify these if you want to change the WhiteCore system Estate names
+;;  Modify these if you want to change the Virtual Universe system Estate names
 ;MainlandEstateName = "Universe Mainland"
 ;SystemEstateName = "Universe Estate"
 
