--- a/VirtualUniverse/Config/Grid/ServerConfiguration/Modules/AssetCache.ini
+++ b/VirtualUniverse/Config/Grid/ServerConfiguration/Modules/AssetCache.ini
@@ -18,7 +18,7 @@ Include-FlotsamCache = Grid/ServerConfiguration/AssetCache/FlotsamCache.ini
 [ImageDecoding]
 ;; Use CSJ2K for layer boundary decoding if true, OpenJPEG is used if false
 ;; Default is false
-UseCSJ2K = false
+UseCSJ2K = true
 
 ;; Use the J2K cache to store decoded textures
 ;; ## It is recommended that you do not disable this ##
