Change UniverseThreadPool and UniverseXmlDocument
- Change UniverseThreadPool to ThreadPool and rename UniverseThreadPool files
- Change UniverseXmlDocument to XmlDocument and rename UniverseXmlDocument files

NOTE: Upstream has their brand name in their file which is really just the same file they got from Opensimulator and edited so we should stop naming files with our brand name unless absolutely necessary.

Signed-Off-By: BritanyannStarfinder<britanyann@secondgalaxy.com> (reverted from commit 191fb6238ba48881623fe4ffbb3206d9e29a050d)

--- a/Universe/Framework/Universe.Framework.csproj
+++ b/Universe/Framework/Universe.Framework.csproj
@@ -1038,10 +1038,10 @@
 	  <Compile Include="Utilities\UndoStack.cs">
 		<SubType>Code</SubType>
 	  </Compile>
-	  <Compile Include="Utilities\ThreadPool.cs">
+	  <Compile Include="Utilities\UniverseThreadPool.cs">
 		<SubType>Code</SubType>
 	  </Compile>
-	  <Compile Include="Utilities\XmlDocument.cs">
+	  <Compile Include="Utilities\UniverseXmlDocument.cs">
 		<SubType>Code</SubType>
 	  </Compile>
 	  <Compile Include="Utilities\UnsafeBitmap.cs">
