--- a/VirtualUniverse/Config/Sim/Modules/AssetCache.ini
+++ b/VirtualUniverse/Config/Sim/Modules/AssetCache.ini
@@ -14,3 +14,12 @@ Include-FlotsamCache = Sim/Modules/AssetCache/FlotsamCache.ini
 ;; This is the core asset cache. It is EXTREMELY NOT recommended to use this cache, 
 ;;  and can slow down your sim!
 ;AssetCaching = CoreAssetCache
+
+[ImageDecoding]
+;; Use CSJ2K for layer boundary decoding if true, OpenJPEG is used if false
+;; Default is false
+UseCSJ2K = false
+
+;; Use the J2K cache to store decoded textures
+;; ##  It is not recommended to disable this  ##
+UseJ2KCache = true
