--- a/Universe/Services/GenericServices/Universe.Services.GenericServices.csproj
+++ b/Universe/Services/GenericServices/Universe.Services.GenericServices.csproj
@@ -1,7 +1,7 @@
-<Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003" ToolsVersion="12.0">
+<Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003" ToolsVersion="4.0">
 	<PropertyGroup>
 	  <ProjectType>Local</ProjectType>
-	  <ProductVersion>12.0.31101</ProductVersion>
+	  <ProductVersion>9.0.30729</ProductVersion>
 	  <SchemaVersion>2.0</SchemaVersion>
 	  <ProjectGuid>{4EF113BA-0000-0000-0000-000000000000}</ProjectGuid>
 	  <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -361,7 +361,10 @@
 	  <Compile Include="SimulationService\SimulationServiceConnector.cs">
 		<SubType>Code</SubType>
 	  </Compile>
-	  <Compile Include="SystemAccountService\SystemAccountService.cs">
+	  <Compile Include="System\SystemAccountService.cs">
+		<SubType>Code</SubType>
+	  </Compile>
+	  <Compile Include="System\SystemEstateService.cs">
 		<SubType>Code</SubType>
 	  </Compile>
   </ItemGroup>
