Cleanup configuration files
- Lets get the configuration files all cleaned up before the final release version for Version 1.0.3

Signed-Off-By: NoahStarfinder<noah@secondgalaxy.com>

--- a/VirtualUniverse/Config/Grid/IndividualServers/Universe.ServersBase.ini
+++ b/VirtualUniverse/Config/Grid/IndividualServers/Universe.ServersBase.ini
@@ -38,8 +38,8 @@ Console = LocalConsole
 save_crashes = false
 
 ;; Directory to save crashes to if above is enabled
-;; (default is Data/Crashes/*.txt)
-crash_dir = ./Data/Crashes
+;; (default is Data/crashes/*.txt)
+crash_dir = ./Data/crashes
 
 ;; Place to create a PID file (*nix only)
 ;PIDFile = /tmp/my.pid
