--- a/VirtualUniverse/Config/Grid/ServerConfiguration/AssetCache/FlotsamCache.ini
+++ b/VirtualUniverse/Config/Grid/ServerConfiguration/AssetCache/FlotsamCache.ini
@@ -2,16 +2,15 @@
 AssetCaching = "FlotsamAssetCache"
 
 [AssetCache]
-;;
+
 ;; Options for FlotsamAssetCache
-;;
 
 ;; cache directory can be shared by multiple instances
 ;; Default >> CacheDirectory = ../Data/AssetCache
 CacheDirectory = 
 
 ; Other examples:
-;CacheDirectory = /directory/writeable/by/VirtualUniverse/instance
+;CacheDirectory = /directory/writeable/by/Virtual Universe/instance
 
 ; Log level
 ; 0 - (Error) Errors only
