--- a/VirtualUniverse/Config/Grid/ServerConfiguration/Data/SQLite.ini
+++ b/VirtualUniverse/Config/Grid/ServerConfiguration/Data/SQLite.ini
@@ -5,10 +5,9 @@
 ;; You may specify the full path if you wish to save the database elsewhere
 ;;  eg.   'Data Source=file:C:/Data/SQLite/universe.db' 
 ;;     or 'Data Source=file:/home/universe/database/universe.db'
-
 [UniverseData]
 StorageProvider = SQLite
-ConnectionString = "Data Source=file:universe.db"
+ConnectionString = "Data Source=file:Universe.db"
 
 [IAvatarData]
 ConnectionString = "Data Source=file:avatars.db"
