--- a/VirtualUniverse/Config/Grid/ServerConfiguration/Modules/SMTPEmail.ini
+++ b/VirtualUniverse/Config/Grid/ServerConfiguration/Modules/SMTPEmail.ini
@@ -33,7 +33,7 @@ local_only = true
 ;; If 1 step verification is used, access for 'less secure apps' will need to be turned off.
 
 ;; To use mono (Linux etc) you should import Google's certificate by executing the following commands
-;; sudo mozroots --import --ask-remove
-;; sudo certmgr -ssl smtps://smtp.gmail.com:465
+;; mozroots --import --ask-remove
+;; certmgr -ssl smtps://smtp.gmail.com:465
 ;; change to true if you have imported the certificate
 SMTP_SERVER_MONO_CERT = false
