--- a/VirtualUniverse/Config/MyGrid.ini
+++ b/VirtualUniverse/Config/MyGrid.ini
@@ -8,17 +8,17 @@
 ;;  however they are, by default, commented out and hence ignored.
 ;;  Any settings here will override any previous settings elsewhere.
 ;;
-;; For more specific customization, see the appropriate *.ini files 
+;; For more specific customisation, see the appropriate *.ini files 
 ;;
-;; Virtual Universe 1.0.2, JUne 16, 2016
+;; Virtual Universe 1.0.3, June 15, 2016
 
 [GridInfoService]
 
 ;; long grid name: the long name of your grid
-;gridname = "Virtual Universe"
+;gridname = "My Virtual Universe"
 
 ;; short grid name: the short name of your grid
-;gridnick = "VirtualUniverse"
+;gridnick = "Universe"
 
 [LoginService]
 
@@ -43,8 +43,8 @@
 
 [EstateService]
 ;;  Modify these if you want to change the Virtual Universe system Estate names
-;MainlandEstateName = "Universe Mainland"
-;SystemEstateName = "Universe Estate"
+;MainlandEstateName = "Virtual Universe Mainland"
+;SystemEstateName = "Virtual Universe Estate"
 
 [Network]
 
@@ -66,4 +66,3 @@
 
 ;; The main port that is used to 'listen for connections'
 ;http_listener_port = 8002
-
