--- a/VirtualUniverse/Config/Sim/Data/SQLite.ini
+++ b/VirtualUniverse/Config/Sim/Data/SQLite.ini
@@ -8,7 +8,7 @@
 
 [UniverseData]
 StorageProvider = SQLite
-ConnectionString = "Data Source=file:universe.db"
+ConnectionString = "Data Source=file:Universe.db"
 
 [IAvatarData]
 ConnectionString = "Data Source=file:avatars.db"
