--- a/VirtualUniverse/Config/Sim/Modules/Economy.ini
+++ b/VirtualUniverse/Config/Sim/Modules/Economy.ini
@@ -7,7 +7,7 @@
 ;;  used with real money or in a production environment!
 ;;
 ;;NOTE :
-;; By using this module you agree that Skidz Tweak, Revolution Smythe, WhiteCore-Sim, Virtual Universe, or
+;; By using this module you agree that Skidz Tweak, Revolution Smythe, Virtual Universe, or
 ;;  other contributing developers ARE IN NO WAY responsible for any
 ;;  damages that may occur as a result of using this module.
 ;; By using this module you agree that you understand the risks of
@@ -17,7 +17,6 @@
 ;;  listed above. If you do not agree, stop using it.
 ;;
 ;;  ## This file configures all the currency settings when used in Standalone mode ##
-;;
 
 [Currency]
 Module = BaseCurrency
