--- a/VirtualUniverse/Config/Sim/Modules/Startup.ini
+++ b/VirtualUniverse/Config/Sim/Modules/Startup.ini
@@ -1,8 +1,11 @@
+
 ;; ##
 ;; ## Region Startup Settings
 ;; ##
 
+
 [UniverseStartup]
+
 ;; Minimum Z value that prims can travel to before they are returned
 ;; Default: -1000
 MaxLowValue = -1000
@@ -19,6 +22,7 @@ RemoteAccessPassword = ""
 Enabled = false
 
 [Animations]
+
 ;; 'Splat' is another animation state. It occurs when you fall very fast and hit the ground or
 ;;    another prim, and your avatar will fall face first into it, then get up and brush him/her self off.
 enableSplatAnimation = true
@@ -29,7 +33,7 @@ SlowFlyDelay = 10
 [Attachments]
 ;; Allows multiple attachments to be added to an avatar in Viewer 2
 ;; Default is true
-EnableMultipleAttachments = false
+EnableMultipleAttachments = true
 
 ;; The maximum number of attachments an avatar can wear at one time
 ;; Default is 38
@@ -42,8 +46,8 @@ MaxNumberOfAttachments = 38
 SendTerrainByViewDistance = true
 
 ;; Enable the generation of 3D water (THIS WILL CAUSE YOUR CLIENT TO CRASH UNLESS IT SUPPORTS IT)
-;; Default is true
-Use3DWater = true
+;; Default is false
+Use3DWater = false
 
 ;; If you wish to have no terrain, enable this option
 ;; Default is false
