--- a/VirtualUniverse/Config/Sim/Modules/UniverseModules.ini
+++ b/VirtualUniverse/Config/Sim/Modules/UniverseModules.ini
@@ -70,7 +70,7 @@ AllowGodTeleports = true
 ;; Default is true
 ;GenerateMaptiles = true
 
-;; This are the default Virtual Universe map modules
+;; This is the default Virtual Universe map modules
 WorldMapModule = WorldMapModule
 
 ;; Should map tiles be created in their own thread which can speed up start-up?
@@ -220,6 +220,7 @@ UseDwell = true
 [OpenRegionSettings]
 ;; IF YOU WANT TO OVERRIDE THE SETTINGS THAT ARE SET IN THE VIEWER FOR OPEN REGION SETTINGS
 ;;   YOU MAY DO SO HERE, BUT IT IS NOT RECOMMENDED, AS THEY COULD JUST BE SET IN THE VIEWER
+
 ;; ##
 ;; ## Prim Scale
 ;; ##
