--- a/VirtualUniverse/Config/Sim/Scripting/VirtualScript.ini
+++ b/VirtualUniverse/Config/Sim/Scripting/VirtualScript.ini
@@ -9,11 +9,8 @@ Enabled = true
 SleepTime = 100
 
 ;; The amount of threads to run simultaneously for script events
-;; If you are running on Microsoft Windows you may need to set
-;; this to 50 as Windows handles system resources and thread 
-;; processing differently then Linux or Mac OS X
 ;; Default is 100
-MaxScriptThreads = 100
+MaxScriptThreads = 50
 
 ;; Should all script errors be shown on the console
 ;; Default is false.
@@ -57,7 +54,7 @@ AppDomainPermissions = "FullTrust"
 
 ;; Path to the script binaries (this must be the full path, not just from /bin!)
 ;; Default is commented out (use predefined setting of "../Data/ScriptEngines"
-; PathToLoadScriptsFrom = ""
+;PathToLoadScriptsFrom = ""
 
 ;; Time before the script engine will stop looking for script errors.
 ;; Default is 5 seconds.
@@ -104,7 +101,7 @@ ScriptDistanceLimitFactor = 1.0
 ;; Increasing this to large values potentially opens
 ;; up the system to malicious scripters.
 ;; Default is 255.
-; NotecardLineReadCharsMax = 255
+;NotecardLineReadCharsMax = 255
 
 ;; Sensor settings.
 ;; Max range for llSensor and family
@@ -124,7 +121,7 @@ UseSensorMaxResults = true
 ;; Allow for llCreateLink and llBreakLink to work without asking for permission
 ;; only enable this in a trusted environment otherwise you may be subject to hijacking
 ;; Default is false.
-; AutomaticLinkPermission = false
+;AutomaticLinkPermission = false
 
 ; Allow for llSetPrimitiveParams and related functions to use Virtual Universe
 ; params via OS_* constants.
@@ -134,7 +131,7 @@ UseSensorMaxResults = true
 ;; false to allow script controlled underground positioning of
 ;; prims
 ;; Default is true.
-; DisableUndergroundMovement = true
+;DisableUndergroundMovement = true
 
 ;; Change to false if you would like to block llRezObject (for griefing purposes, this might be a good idea)
 ;; Default is true.
@@ -150,7 +147,7 @@ AllowRunningOfScriptsInAttachments = true
 
 ;; This sets the APIs that are allowed.
 ;; Values:
-;;   aa: Aurora functions
+;;   aa: Universe functions
 ;;   ossl: OSSL functions
 ;;   mod: MOD Api functions
 ;;   ll: LSL functions
