--- a/VirtualUniverse/Config/Universe.Server.ini
+++ b/VirtualUniverse/Config/Universe.Server.ini
@@ -1,6 +1,7 @@
-;; This file is the main setup of Virtual Universe Grid server when used in Grid mode
+;; This file is the main setup of the Virtual Universe Grid server when used in Grid mode
 ;;
 ;; See Grid/ServerConfiguration/*           for the additional configuration options.
+;;
 
 [Network]
 ;; Advanced configs
@@ -54,8 +55,8 @@ DataDirectory = ""
 save_crashes = false
 
 ;; Directory to save crashes to if above is enabled
-;; (default is /Data/Crashes/*.txt or C:\Data\Crashes\*.txt)
-crash_dir = ./Data/Crashes
+;; (default is /bin/crashes/*.txt or C:\bin\crashes\*.txt)
+crash_dir = ./Data/crashes
 
 ;; Place to create a PID file
 ;PIDFile = /tmp/my.pid
@@ -97,7 +98,7 @@ InstantMessagingServiceServerHandlerPort = 8003
 UserAccountServiceOpenServerHandler = true
 UserAccountServiceServerHandlerPort = 8003
 
-;; Set up Universe-Server to run all of the services
+;; Set up Virtual Universe Server to run all of the services
 ;; This is the default.
 ;; If you wish to run separate *.server.exe files, you will need
 ;; to comment this line and configure these services externally.
@@ -123,13 +124,13 @@ ParcelConnector = LocalConnector
 EmailConnector = LocalConnector
 
 ;; Maximum non-group chat messages that the server will store per user
-MaxOfflineMessages = 50
+MaxOfflineMessages = 500
 
 ;; Whether we should save any group chat messages for users
 SaveOfflineGroupChatMessages = true
 
 ;; The maximum number of group chat messages that the server will store per user
-MaxGroupOfflineMessages = 50
+MaxGroupOfflineMessages = 500
 
 DoRemoteCalls = False
 CapsServiceDoRemoteCalls = False
