--- a/VirtualUniverse/Config/Grid/IndividualServers/Universe.WebServer.ini
+++ b/VirtualUniverse/Config/Grid/IndividualServers/Universe.WebServer.ini
@@ -23,7 +23,6 @@ https_ssl_protocol = "Default"
 ;; The default is your external IP
 ;HostName = http://127.0.0.1
 
-
 [Console]
 ;; Setting for which console log will be used
 ;; Values are:
@@ -44,8 +43,8 @@ Console = LocalConsole
 save_crashes = false
 
 ;; Directory to save crashes to if above is enabled
-;; (default is Data/Crashes/*.txt)
-crash_dir = ./Data/Crashes
+;; (default is bin/crashes/*.txt)
+crash_dir = ./crashes
 
 ;; Place to create a PID file (*nix only)
 ;PIDFile = /tmp/my.pid
