--- a/VirtualUniverse/Config/MyWorld.ini
+++ b/VirtualUniverse/Config/MyWorld.ini
@@ -1,21 +1,21 @@
 ;; MyWorld.ini
-;; This file is used to quickly customize the main settings of Virtual Universe
+;; This file is used to quickly customise the main settings of Virtual Universe
 ;;   when used in Standalone mode.
 ;;
-;;  ##  This file and its settings are ignored if running in Grid mode  ## 
+;;  ##  This file and its settings are ignored if running in Grid mode  ##
 ;;
 ;; The settings below are the the same as those in the configuration files
 ;;  however they are, by default, commented out and hence ignored.
 ;;  Any settings here will override any previous settings elsewhere.
 ;;
-;; For more specific customisation, see the appropriate *.ini files 
+;; For more specific customisation, see the appropriate *.ini files
 ;;
-;; Virtual Universe 1.0.2, June 15, 2016
+;; Virtual Universe 1.0.3, June 15, 2016
 
 [GridInfoService]
 
 ;; long grid name: the long name of your grid
-;gridname = "Virtual Universe"
+;gridname = "Virtual Universe Sandbox"
 
 ;; short grid name: the short name of your grid
 ;gridnick = "Universe"
