--- a/VirtualUniverse/Config/Sim/Scripting/Scripting.ini
+++ b/VirtualUniverse/Config/Sim/Scripting/Scripting.ini
@@ -1,7 +1,8 @@
 [ScriptEngines]
+;;
 ;; If you want to run VirtualScript as your default engine, uncomment this
 Include-VS = Sim/Scripting/VirtualScript.ini
-
+;;
 ;; If you would like to use MRM, uncomment this and edit its config file
 Include-MRM = Sim/Scripting/MRM.ini
 
@@ -10,12 +11,13 @@ Include-MRM = Sim/Scripting/MRM.ini
 ;; font_name = Arial
 
 [LSLRemoting]
+
 ;; What is reported as the X-Secondlife-Shard for llHTTPRequest.
-;; Defaults to Virtual Universe
+;; Defaults to Universe
 shard = Universe
 
 ;; What is reported as the User-Agent when using llHTTPRequest
-;; Defaults to not sent if not set here. See the notes section in the wiki at
+;; Defaults to not sent if not set here. See the notes section in the wiki at 
 ;;   http://wiki.secondlife.com/wiki/LlHTTPRequest for comments on adding
 ;; (Mozilla Compatible) to the text where there are problems with a web server
 user_agent = Universe LSL (Mozilla Compatible)
@@ -29,26 +31,28 @@ user_agent = Universe LSL (Mozilla Compatible)
 ;; script concurrently with the first remote_data event.
 ;; This will contain the fully qualified URI an external site needs
 ;; to use to send XMLRPC requests to that script
+
 ;XmlRpcRouterModule = XmlRpcRouterModule
 ;XmlRpcPort = 20800
 
 [HTTPScriptModule]
+
 ;; Http proxy support for llHTTPRequest and dynamic texture loading
-;; Set HttpProxy to the URL for your proxy server if you would like to proxy
+;; Set HttpProxy to the URL for your proxy server if you would like to proxy 
 ;;  llHTTPRequests through a firewall
 ;HttpProxy = http://proxy.com
 
-;; Set HttpProxyExceptions to a list of regular expressions for URLs that you don't
+;; Set HttpProxyExceptions to a list of regular expressions for URLs that you don't 
 ;;  want going through the proxy such as servers inside your firewall.
 ;; Separate patterns with a ';'
 ;HttpProxyExceptions = .mydomain.com;localhost'
 
 [RegionReady]
-;; This Functionality can be used in Conjunction with "StartDisabled = true" to enable
+;; This Functionality can be used in Conjunction with "StartDisabled = true" to enable 
 ;;  logins after scripts and all loaded
 ;; Reference: http://forums.osgrid.org/viewtopic.php?f=5&t=2863&start=0
 ;;
-;; Enable this module to get notified once all items and scripts in the region have
+;; Enable this module to get notified once all items and scripts in the region have 
 ;;  been completely loaded and compiled
 ;; default is false
 enabled = false
