--- a/VirtualUniverse/Config/Universe.Server.ini.example
+++ b/VirtualUniverse/Config/Universe.Server.ini.example
@@ -1,9 +1,7 @@
-;; This file is the setup template for the Virtual Universe Grid server 
-;;   when the configurator is used
-;;
-;;  ##  You DO NOT need to change anything here  ##
+;; This file is the main setup of the Virtual Universe Grid server when used in Grid mode
 ;;
 ;; See Grid/ServerConfiguration/*           for the additional configuration options.
+;;
 
 [Network]
 ;; Advanced configs
@@ -21,10 +19,11 @@ HttpThreadCount = 10
 ;;   your external IP address, or you want to use this instance locally.
 ;; Set to a specific IP address or hostname if known
 ;; Alternatively, set to "localip" to use the local system IP address
-;; HostName = "http://mygrid.mydomain.com"
-;; HostName = "localip"
+;; HostName = http://mygrid.mydomain.com
+;; HostName = localip
 
 ;; Default >> Commented - use your external IP address for connections
+;HostName = localip
 ;HostName = 127.0.0.1
 
 [Console]
@@ -56,10 +55,10 @@ DataDirectory = ""
 save_crashes = false
 
 ;; Directory to save crashes to if above is enabled
-;; (default is Data/Crashes/*.txt)
-crash_dir = ./Data/Crashes
+;; (default is /bin/crashes/*.txt or C:\bin\crashes\*.txt)
+crash_dir = ./Data/crashes
 
-;; Place to create a PID file (*nix only)
+;; Place to create a PID file
 ;PIDFile = /tmp/my.pid
 
 ;; Commands to be run on startup are in the given file
@@ -99,7 +98,7 @@ InstantMessagingServiceServerHandlerPort = 8003
 UserAccountServiceOpenServerHandler = true
 UserAccountServiceServerHandlerPort = 8003
 
-;; Set up Universe-Server to run all of the services
+;; Set up Virtual Universe Server to run all of the services
 ;; This is the default.
 ;; If you wish to run separate *.server.exe files, you will need
 ;; to comment this line and configure these services externally.
@@ -125,13 +124,13 @@ ParcelConnector = LocalConnector
 EmailConnector = LocalConnector
 
 ;; Maximum non-group chat messages that the server will store per user
-MaxOfflineMessages = 50
+MaxOfflineMessages = 500
 
 ;; Whether we should save any group chat messages for users
 SaveOfflineGroupChatMessages = true
 
 ;; The maximum number of group chat messages that the server will store per user
-MaxGroupOfflineMessages = 50
+MaxGroupOfflineMessages = 500
 
 DoRemoteCalls = False
 CapsServiceDoRemoteCalls = False
