--- a/VirtualUniverse/Config/Universe.ini
+++ b/VirtualUniverse/Config/Universe.ini
@@ -1,8 +1,11 @@
-;; This file is the main setup of Virtual Universe when used in Standalone mode
-;;  or as the settings for the Region server when used in Grid mode
+;; This file is the setup template for the Virtual Universe server 
+;;   when the configurator is used
 ;;
-;; See Sim/*           for the additional configuration options.
+;;  ##  You DO NOT need to change anything here  ##
+;;
+;; See Sim/*   for the additional config files.
 ;; Edit Sim/Main.ini   to select your Install Setup and follow to next appropriate file
+;;
 
 [Startup]
 ;; Directory path for all data
@@ -15,8 +18,8 @@ DataDirectory = ""
 save_crashes = false
 
 ;; Directory to save crashes to if above is enabled
-;; (default is Data/Crashes/*.txt)
-crash_dir = ./Data/Crashes
+;; (default is Data/crashes/*.txt)
+crash_dir = ./Data/crashes
 
 ;; Place to create a PID file (*nix only)
 ;PIDFile = /tmp/my.pid
@@ -68,11 +71,10 @@ HttpThreadCount = 10
 ;; This does not require any changes if you wish to use the automatic finding of the external IP
 ;; Set to a specific IP address or hostname if known
 ;; Alternatively, set to "localip" to use the local system IP address
-;; HostName = http://mygrid.mydomain.com
-;; HostName = localip
+;; HostName = "http://mygrid.mydomain.com"
+;; HostName = "localip"
 
 ;; Default >> Commented - use your external IP address for connections
-;HostName = localip
 ;HostName = 127.0.0.1
 
 [Console]
@@ -85,7 +87,7 @@ HttpThreadCount = 10
 Console = LocalConsole
 
 ;; If you want to save your log file to a specific location, set your desired path
-;; Default is commented out >> The Logfile is saved in the 'Data' folder
+;; Default is commented out >> The Logfile will be saved in the 'Data' folder
 ;LogPath = 
 
 ;; If you want to append a string to the log file name
