--- a/VirtualUniverse/Config/Universe.ini.example
+++ b/VirtualUniverse/Config/Universe.ini.example
@@ -5,6 +5,7 @@
 ;;
 ;; See Sim/*   for the additional config files.
 ;; Edit Sim/Main.ini   to select your Install Setup and follow to next appropriate file
+;;
 
 [Startup]
 ;; Directory path for all data
@@ -17,8 +18,8 @@ DataDirectory = ""
 save_crashes = false
 
 ;; Directory to save crashes to if above is enabled
-;; (default is Data/Crashes/*.txt)
-crash_dir = ./Data/Crashes
+;; (default is Data/crashes/*.txt)
+crash_dir = ./Data/crashes
 
 ;; Place to create a PID file (*nix only)
 ;PIDFile = /tmp/my.pid
