--- a/VirtualUniverse/bin/DefaultInventory/Inventory.ini
+++ b/VirtualUniverse/bin/DefaultInventory/Inventory.ini
@@ -6,12 +6,7 @@
 
     WipeLibrariesOnNextLoad = False
 
-    ;;
-    ;;
-    ;; The rest of this config is for optional modules in the Optional-Modules repository
-    ;;
-    ;;
-
+    ;; The rest of this config is for optional modules in the Universe-Optional-Modules repository
 [InventoryXMLLoader]
     DefaultLibrary = inventory\Libraries.xml
     PreviouslyLoaded = true
